Front-end - Update Area list and management interface

--- a/singsing/src/main/resources/static/app/components/areas/areas.template.html
+++ b/singsing/src/main/resources/static/app/components/areas/areas.template.html
@@ -1,48 +1,48 @@
 <div>
-        <h1>Add or modify area</h1>
-        <form>
-            Id:<br>
-            <input type="number" ng-model="newArea.id">
-            <br>
-            Name:<br>
-            <input type="text" ng-model="newArea.name">
-            <br>
-        </form>
-        <button ng-click="submitNewArea()">
-            Save
-        </button>
-        <button ng-click="cancelNewArea()">
-            Cancel
-        </button>
-    </div>
-    <div>
-        <table id="areaList_table" class="table table-condensed table-bordered table-striped">
-            <thead>
+    <h1 ng-if="!isEditing">Add new area</h1>
+    <h1 ng-if="isEditing">Edit area</h1>
+    <form>
+        Name:<br>
+        <input type="text" ng-model="newArea[areaModel.name]">
+        <br>
+    </form>
+    <button ng-click="submitNewArea()">
+        <p ng-if="!isEditing">Add</p>
+        <p ng-if="isEditing">Save</p>
+    </button>
+    <button ng-click="cancelNewArea()">
+        Cancel
+    </button>
+</div>
+<br />
+<div>
+    <table id="areaList_table" class="table table-condensed table-bordered table-striped">
+        <thead>
+            <td>
+                ID
+            </td>
+            <td>
+                NAME
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+        </thead>
+        <tbody>
+            <tr ng-repeat="i in areas track by i[areaModel.id]">
+                <td>{{i[areaModel.id]}}</td>
+                <td>{{i[areaModel.name]}}</td>
                 <td>
-                    ID
+                    <button ng-click="editArea(i[areaModel.id])">
+                        Edit
+                    </button>
                 </td>
                 <td>
-                    NAME
+                    <button ng-click="deleteArea(i[areaModel.id])">
+                        Delete
+                    </button>
                 </td>
-                <td>
-                </td>
-                <td>
-                </td>
-            </thead>
-            <tbody>
-                <tr ng-repeat="i in areas track by i.id">
-                    <td>{{i.id}}</td>
-                    <td>{{i.name}}</td>
-                    <td>
-                        <button ng-click="editArea(i.id)">
-                            Edit
-                        </button>
-                    </td>
-                    <td>
-                        <button ng-click="deleteArea(i.id)">
-                            Delete
-                        </button>
-                    </td>
-                </tr>
-        </table>
-    </div>
+            </tr>
+    </table>
+</div>
