Add guards to the UI

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -22,6 +22,7 @@
   <script src="app/components/cells/cells.component.js"></script>
   <script src="app/components/prisoners/prisoners.component.js"></script>
   <script src="app/components/areas/areas.component.js"></script>
+  <script src="app/components/guards/guards.component.js"></script>
   <script src="app/services/backEndService/backEndService.service.js"></script>
   <script src="app/models/backEndModel.js"></script>
 </head>
@@ -39,6 +40,7 @@
           <li><a href="/cells">Cells</a></li>
           <li><a href="/prisoners">Prisoners</a></li>
           <li><a href="/areas">Areas</a></li>
+          <li><a href="/guards">Guards</a></li>
         </ul>
       </div>
     </nav>
