SS-9 almost done

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -7,14 +7,14 @@
   <base href="/" />
 
   <title>SingSing</title>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="node_modules/datatables/media/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
   <link rel="stylesheet" href="app/app.css" />
 
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/angular/angular.js"></script>
-  <script src="node_modules/angular-route/angular-route.js"></script>
-  <script src="node_modules/datatables/media/js/jquery.dataTables.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.config.js"></script>
   <script src="app/index.controller.js"></script>
@@ -22,6 +22,7 @@
   <script src="app/components/cells/cells.component.js"></script>
   <script src="app/components/prisoners/prisoners.component.js"></script>
   <script src="app/components/areas/areas.component.js"></script>
+  <script src="app/components/schedule/schedule.component.js"></script>
   <script src="app/services/backEndService/backEndService.service.js"></script>
   <script src="app/models/backEndModel.js"></script>
 </head>
@@ -39,6 +40,7 @@
           <li><a href="/cells">Cells</a></li>
           <li><a href="/prisoners">Prisoners</a></li>
           <li><a href="/areas">Areas</a></li>
+          <li><a href="/schedule">Schedule</a></li>
         </ul>
       </div>
     </nav>
