--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
   <script src="app/components/prisoners/prisoners.component.js"></script>
   <script src="app/components/areas/areas.component.js"></script>
   <script src="app/components/guards/guards.component.js"></script>
-  <script src="app/components/schedule/schedule.component.js"></script>
+  <script src="app/components/schedules/schedules.component.js"></script>
   <script src="app/services/backEndService/backEndService.service.js"></script>
   <script src="app/models/backEndModel.js"></script>
 </head>
@@ -42,7 +42,7 @@
           <li><a href="/prisoners">Prisoners</a></li>
           <li><a href="/areas">Areas</a></li>
           <li><a href="/guards">Guards</a></li>
-          <li><a href="/schedule">Schedule</a></li>
+          <li><a href="/schedules">Schedule</a></li>
         </ul>
       </div>
     </nav>
