--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -7,14 +7,14 @@
   <base href="/" />
 
   <title>SingSing</title>
-  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="node_modules/datatables/media/css/jquery.dataTables.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
   <link rel="stylesheet" href="app/app.css" />
 
-  <script src="node_modules/jquery/dist/jquery.js"></script>
-  <script src="node_modules/angular/angular.js"></script>
-  <script src="node_modules/angular-route/angular-route.js"></script>
-  <script src="node_modules/datatables/media/js/jquery.dataTables.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
+  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.config.js"></script>
   <script src="app/index.controller.js"></script>
