implement logout button

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -41,6 +41,7 @@
           <li><a href="/prisoners">Prisoners</a></li>
           <li><a href="/areas">Areas</a></li>
           <li><a href="/guards">Guards</a></li>
+          <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
     </nav>
