Add map controller

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
   <script src="app/components/guards/guards.component.js"></script>
   <script src="app/components/schedules/schedules.component.js"></script>
   <script src="app/components/logs/logs.component.js"></script>
+  <script src="app/components/map/map.component.js"></script>
   <script src="app/services/backEndService/backEndService.service.js"></script>
   <script src="app/models/backEndModel.js"></script>
 </head>
@@ -48,6 +49,7 @@
           <li><a href="/guards">Guards</a></li>
           <li><a href="/schedules">Schedule</a></li>
           <li><a href="/logs">Logs</a></li>
+          <li><a href="/map">Map</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
