Add implementation with vis.js

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" />
   <link rel="stylesheet" href="app/app.css" />
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script>
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.7.5/angular-sanitize.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.1.2/mermaid.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.config.js"></script>
   <script src="app/index.controller.js"></script>
@@ -28,7 +28,7 @@
   <script src="app/components/guards/guards.component.js"></script>
   <script src="app/components/schedules/schedules.component.js"></script>
   <script src="app/components/logs/logs.component.js"></script>
-  <script src="app/components/map/map.component.js"></script>
+  <script src="app/components/topology/topology.component.js"></script>
   <script src="app/services/backEndService/backEndService.service.js"></script>
   <script src="app/models/backEndModel.js"></script>
 </head>
@@ -48,8 +48,8 @@
           <li><a href="/areas">Areas</a></li>
           <li><a href="/guards">Guards</a></li>
           <li><a href="/schedules">Schedule</a></li>
+          <li><a href="/topology">Topology</a></li>
           <li><a href="/logs">Logs</a></li>
-          <li><a href="/map">Map</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
