--- a/singsing/src/main/resources/static/app/components/topology/topology.template.html
+++ b/singsing/src/main/resources/static/app/components/topology/topology.template.html
@@ -6,7 +6,7 @@
 <div id="singsingTopology" style="height:600px"></div>
 
 <div id="colors">
-    <div><span id="medium-sec-color" style="height: 25px; width: 25px; background-color: #0075C4; border-radius: 50%; display: inline-block;"></span> Medium security</div>
-    <div><span id="high-sec-color" style="height: 25px; width: 25px; background-color: #47578C; border-radius: 50%; display: inline-block;"></span> High security</div>
-    <div><span id="priority-sec-color" style="height: 25px; width: 25px; background-color: #483560; border-radius: 50%; display: inline-block;"></span> Priority security</div>
+    <div><span id="medium-sec-color" style="height: 25px; width: 25px; background-color: #80ccff; border-radius: 50%; display: inline-block;"></span> Medium security</div>
+    <div><span id="high-sec-color" style="height: 25px; width: 25px; background-color: #0091F2; border-radius: 50%; display: inline-block;"></span> High security</div>
+    <div><span id="priority-sec-color" style="height: 25px; width: 25px; background-color: #302340; border-radius: 50%; display: inline-block;"></span> Priority security</div>
 </div>
