SS-42 Add progress bar to the UI

--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -50,6 +50,12 @@
       </div>
     </nav>
 
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" ng-style="fullnessStyle">
+        {{fullness}}%
+      </div>
+    </div>
+
     <div class="main-container">
       <div class="container">
         <div ng-view="">
