--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
   <script src="app/components/prisoners/prisoners.component.js"></script>
   <script src="app/components/areas/areas.component.js"></script>
   <script src="app/components/guards/guards.component.js"></script>
+  <script src="app/components/holiday/holiday.component.js"></script>
   <script src="app/components/schedules/schedules.component.js"></script>
   <script src="app/components/logs/logs.component.js"></script>
   <script src="app/components/topology/topology.component.js"></script>
@@ -47,6 +48,7 @@
           <li><a href="/prisoners">Prisoners</a></li>
           <li><a href="/areas">Areas</a></li>
           <li><a href="/guards">Guards</a></li>
+          <li><a href="/holiday">Holidays</a></li>
           <li><a href="/schedules">Schedule</a></li>
           <li><a href="/topology">Topology</a></li>
           <li><a href="/logs">Logs</a></li>
