--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -60,6 +60,14 @@
         {{fullness}}%
       </div>
     </div>
+	
+	<div class="progress">
+      <div class="progress-bar" role="progressbar" ng-style="dispersionStyle">
+        {{dispersion}}%
+      </div>
+    </div>
+
+
 
     <div class="main-container">
       <div class="container">
