--- a/singsing/src/main/resources/templates/index.html
+++ b/singsing/src/main/resources/templates/index.html
@@ -55,12 +55,14 @@
       </div>
     </nav>
 
+	<h5>A cellák átlagos telítettsége</h5>
     <div class="progress">
       <div class="progress-bar" role="progressbar" ng-style="fullnessStyle">
         {{fullness}}%
       </div>
     </div>
 	
+	<h5>A cellák egyenletes telítettsége</h5>
 	<div class="progress">
       <div class="progress-bar" role="progressbar" ng-style="dispersionStyle">
         {{dispersion}}%
